examples/errors/cant_assign_variable_with_not_returning_func.jj
func f
with x


func main
{
    let x { f(1) };
}